--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
     "@mui/material-nextjs": "^5.15.5",
+    "aws-amplify": "^6.0.17",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
