コードの整理

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -8,7 +8,8 @@
       "SourceDir": "src",
       "DistributionDir": "build",
       "BuildCommand": "npm.cmd run-script build",
-      "StartCommand": "npm.cmd run-script start"
+      "StartCommand": "npm.cmd run-script start",
+      "ServerlessContainers": true
     }
   },
   "providers": [
