--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/adapter-nextjs": "^1.0.18",
     "@aws-amplify/ui-react": "^6.1.4",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
@@ -19,7 +20,7 @@
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
     "@mui/material-nextjs": "^5.15.5",
-    "aws-amplify": "^6.0.17",
+    "aws-amplify": "^6.0.18",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
